# floodnet_client

./: .gitignore  FloodNetClient.py  README.md  environment.yaml  pyproject.toml  schemas.py
notebooks/: ida_brooklyn_animation.ipynb
scripts/: ida_brooklyn.py  raw_requests.py
src/floodnet_client/: __init__.py  client.py  schemas.py  spatial.py
tests/: test_client.py
