[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "floodnet-client"
version = "0.1.0"
authors = [
    {name = "Ian Grant"}
]
description = "A simple client for the NYC FloodNet sensor network"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
spatial = [
    "geopandas>=1.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["floodnet_client"]
